tests/cases/alloc_certificate/accept/backslash_alloc_suffix.pr
fn inc(x : Int) : Int \ alloc = x + 1
