tests/cases/alloc_certificate/reject/closure_value.pr
fn make(x : Int) : ((Int) -> Int) @ noalloc = \(y) -> x + y
